# Adore

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/dev/: main.rs
res/shaders/: batch.wgsl  batch_compatibility.wgsl
shaders/: batch.wgsl
src/: adore.rs  amber.rs  api.rs  lib.rs  macros.rs  traits.rs
src/assets/: asset_manager.rs  mod.rs
src/gfx/: batch.rs  batch.wgsl  batcher.rs  font.rs  mod.rs  sprite.rs  texture.rs
src/gfx/raw/: bind.rs  config.rs  context.rs  depth.rs  dynamic_index_buffer.rs  dynamic_uniform.rs  dynamic_vertex_buffer.rs  frame.rs  index_buffer.rs  mod.rs  pipeline.rs  render_pass.rs  texture.rs  uniform.rs  vertex_buffer.rs
src/logger/: mod.rs
src/math/: constants.rs
src/time/: game_time.rs  mod.rs
src/types/: cast.rs  color.rs  delta.rs  errors.rs  mod.rs  position.rs  rectangle.rs  size.rs
src/window/: input.rs  mod.rs  window.rs
